Add Video apresentação/Hello there!
+container-apresentacao: texto e video

Outros:
=diferentes tags usando id->class
+.gitignore
+estilo "default" de botões
-estilo botão register

--- a/web/index.html
+++ b/web/index.html
@@ -21,10 +21,10 @@
 
 <body>
     <!--!HEADER-->
-    <header id="container-header">
+    <header class="container-header">
         <a href="index.html"><img src="images/MHLogoSMALL.png" alt="Logo da MoonHunters"></a>
 
-        <nav id="nav">
+        <nav>
             <a href="">Home</a>
             <a href="">Profile</a>
             <a href="">Community</a>
@@ -32,9 +32,9 @@
             <a href="">Gambling</a>
         </nav>
         
-        <div id="register-div">
+        <div class="register-div">
             <!-- Possivelmente vamos ter que usar <button> ao invés de <a> -->
-            <a href="" id="register-button">Register</a>
+            <a href="" class="default-button">Register</a>
         </div>
     </header>
 
@@ -42,6 +42,21 @@
     <div class="container-banner">
 
     </div>
+
+    <div class="container-apresentacao">
+
+        <div class="texto-apresentacao">
+            <h2>Hello there!</h2>
+            <p>
+                We don't want you to get lost in this vast universe...<br>
+                So we prepared a special guide for you :D
+            </p>
+            <a href="" class="default-button">Learn more</a>
+        </div>
+
+        <iframe width="600" height="350" src="https://www.youtube.com/embed/2RlTqFtdlH8" title="YouTube video player" frameborder="0" 
+        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+    </div>    
     
 </body>
 </html>
