Modificação função que move slider
=melhoria na função slider_move

--- a/web/index.html
+++ b/web/index.html
@@ -46,15 +46,15 @@
 
             <div class="slide-div">
                 <img src="images/1.png" alt="">
-                <a onclick="izquierda(this)" class="img-button"></a>
+                <a onclick="slider_move(this)" class="img-button"></a>
             </div>
             <div class="slide-div">
                 <img src="images/2.png" alt="">
-                <a onclick="derecha(this)" class="img-button"></a>
+                <a onclick="slider_move(this)" class="img-button"></a>
             </div>
             <div class="slide-div">
                 <img src="images/3.png" alt="">
-                <a onclick="" class="img-button"></a>
+                <a onclick="slider_move(this)" class="img-button"></a>
             </div>
         </div>
     </div>
