Login and Register
Add login and register pages

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
         
         <div class="register-div">
             <!-- Possivelmente vamos ter que usar <button> ao invés de <a> -->
-            <a href="" class="default-button">Register</a>
+            <a href="loginRegister/register.html" class="default-button">Register</a>
         </div>
     </header>
 
