Add banner, username, bio in perfil
+Banner, username, bio in perfil.html

Outros:
=mudança nos arquivos scss, agora usando partials
=parar de usar @import -> @use

--- a/web/index.html
+++ b/web/index.html
@@ -122,7 +122,7 @@
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>Genesis of the Moons</p>
-                <p class="price">$19,89</p>
+                <a href=""><p class="price">$19,89</p></a>
             </div>
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
@@ -191,8 +191,8 @@
             <a><ion-icon name="logo-discord"></ion-icon></a>
         </div>
         <nav class="nav-footer">
-            <a href="#to-the-top">Voltar para o topo</a>
-            <a href="mailto:gamedeVision@gmail.com">Email de contato</a>
+            <a href="#to-the-top">Back to the top</a>
+            <a href="mailto:gamedeVision@gmail.com">Contact</a>
         </nav>
     </footer>
 
