--- a/web/perfil.html
+++ b/web/perfil.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="css/dist/style-perfil.css">
-    <script src="js/main.js" defer></script>
+    <script src="" defer></script>
 </head>
 
 <body>
@@ -39,17 +39,23 @@
     <div class="container-princ">
         <!--! Coluna Esquerda !-->
         <div class="coluna-esquerda">
-            <p>teste</p>
         </div>
     
         <!--! Coluna Central !-->
         <div class="coluna-central">
-            <p>teste</p>
+            <div class="banner-perfil"><img src="images/banner-perfil.jpeg" alt=""></div>
+            <div class="container-content">
+                <div class="username">
+                    <div class="nivel">50</div>
+                    <p class="name">Username<span class="tag">#0000</span></p>
+                    <a href="" class="edit-profile">Edit Profile</a>
+                </div>
+                <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, totam.</p>
+            </div>
         </div>
     
         <!--! Coluna Direita !-->
         <div class="coluna-direita">
-            <p>teste</p>
         </div>
     </div>
 
@@ -62,8 +68,8 @@
             <a><ion-icon name="logo-discord"></ion-icon></a>
         </div>
         <nav class="nav-footer">
-            <a href="#to-the-top">Voltar para o topo</a>
-            <a href="mailto:gamedeVision@gmail.com">Email de contato</a>
+            <a href="#to-the-top">To the top</a>
+            <a href="mailto:gamedeVision@gmail.com">Contact</a>
         </nav>
     </footer>
 
