Add imagem perfil, galeria
+imagem perfil
+galeria

Outos:
=modificações em tags para alinhar corretamente à direita do parent

--- a/web/index.html
+++ b/web/index.html
@@ -88,7 +88,7 @@
 
         <div class="default-container-header">
             <div class="default-container-titulo">TOP COLLECTIONS TODAY</div>
-            <a href=""><div class="default-container-explore">EXPLORE</div></a>
+            <a href="" class="default-container-explore">EXPLORE</a>
         </div>
 
         <div class="topCollections">
@@ -115,34 +115,34 @@
 
         <div class="default-container-header">
             <div class="default-container-titulo">POPULAR CASES</div>
-            <a href=""><div class="default-container-explore">EXPLORE</div></a>
+            <a href="" class="default-container-explore">EXPLORE</a>
         </div>
 
         <div class="popularCases">
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>Genesis of the Moons</p>
-                <a href=""><p class="price">$19,89</p></a>
+                <a href="" class="price">$19,89</a>
             </div>
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>Order of the Moons</p>
-                <a href=""><p class="price">$39,89</p></a>
+                <a href="" class="price">$39,89</a>
             </div>
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>Rise of the MoonHunters</p>
-                <a href=""><p class="price">$59,89</p></a>
+                <a href="" class="price">$59,89</a>
             </div>
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>Revenge of the Moons</p>
-                <a href=""><p class="price">$79,89</p></a>
+                <a href="" class="price">$79,89</a>
             </div>
             <div class="item">
                 <a href=""><img src="images/topC.jpeg" alt=""></a>
                 <p>The Last MoonHunters</p>
-                <a href=""><p class="price">$99,89</p></a>
+                <a href="" class="price">$99,89</a>
             </div>
         </div>
 
@@ -153,7 +153,7 @@
 
         <div class="default-container-header">
             <div class="default-container-titulo">LAST NEWS</div>
-            <a href=""><div class="default-container-explore">EXPLORE</div></a>
+            <a href="" class="default-container-explore">EXPLORE</a>
         </div>
         
         <div class="lastNews">
