--- a/web/perfil.html
+++ b/web/perfil.html
@@ -45,12 +45,32 @@
         <div class="coluna-central">
             <div class="banner-perfil"><img src="images/banner-perfil.jpeg" alt=""></div>
             <div class="container-content">
-                <div class="username">
-                    <div class="nivel">50</div>
-                    <p class="name">Username<span class="tag">#0000</span></p>
-                    <a href="" class="edit-profile">Edit Profile</a>
+                <img class="img-perfil" src="images/bored-ape-835-resized.jpeg" alt="">
+                <div class="container-username">
+                    <div class="username">
+                        <div class="nivel">50</div>
+                        <p class="name">Username<span class="tag">#0000</span></p>
+                        <a href="" class="edit-profile">Edit Profile</a>
+                    </div>
+                    <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, totam.</p>
                 </div>
-                <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, totam.</p>
+            </div>
+            <div class="galeria">
+                <div class="galeria-header">
+                    <h3>Gallery</h3>
+                    <a><ion-icon name="pencil-outline"></ion-icon></a>
+                </div>
+                <div class="imagens">
+                    <img src="images/gallery1.jpg" alt="">
+                    <img src="images/gallery2.jpg" alt="">
+                </div>
+                <div class="galeria-footer">
+                    <div class="arrows">
+                        <ion-icon name="caret-back-outline"></ion-icon>
+                        <ion-icon name="caret-forward-outline"></ion-icon>
+                    </div>
+                    <p>Showcase</p>
+                </div>
             </div>
         </div>
     
