--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,9 @@
         </nav>
         
         <div class="register-div">
-            <a href="perfil.html" class="default-button">Register</a>
+            <span>
+                <a href="perfil.html" class="default-button">Register</a>
+            </span>
         </div>
     </header>
 
