Add Trending, Inventory, Badges
perfil.html:
+trending
+inventory
+badges

Outros:
=fix html height -> min-height
=colunas em perfil -> grid

--- a/web/perfil.html
+++ b/web/perfil.html
@@ -41,6 +41,49 @@
     <div class="container-princ">
         <!--! Coluna Esquerda !-->
         <div class="coluna-esquerda">
+            <div class="container-coluna">
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <ul>
+                        <li>
+                            <span class="item-number">#1</span>
+                            <p>Bunny Buddies</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#2</span>
+                            <p>Flying Formations</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#3</span>
+                            <p>Creepy Creams</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#4</span>
+                            <p>MultiverseVM</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#5</span>
+                            <p>TheLandDAO Official</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#6</span>
+                            <p>Angry Pitbull Club</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                        <li>
+                            <span class="item-number">#7</span>
+                            <p>Roo Troop</p>
+                            <img src="images/perfil.svg" alt="">
+                        </li>
+                    </ul>
+                    <a>More</a>
+                </div>
+            </div>
         </div>
     
         <!--! Coluna Central !-->
@@ -58,6 +101,50 @@
                         <p class="bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptate, eveniet cumque laboriosam ut sunt.</p>
                     </div>
                 </div>
+
+                <div class="inventario">
+                    <div class="inventario-header">
+                        <h3>Inventory</h3>
+                        <a><ion-icon name="pencil-outline"></ion-icon></a>
+                    </div>
+                    <div class="imagens">
+                        <div class="fileira-cima">
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                        </div>
+                        <div class="fileira-baixo">
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                            <a href=""><img src="images/inventario.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="inventario-footer">
+                        <p>Showcase</p>
+                    </div>
+                </div>
+
+                <div class="badges">
+                    <div class="badges-header">
+                        <h3>Badges</h3>
+                        <a><ion-icon name="pencil-outline"></ion-icon></a>
+                    </div>
+                    <div class="imagens">
+                        <a href=""><img src="images/badge.webp" alt=""></a>
+                        <a href=""><img src="images/badge.webp" alt=""></a>
+                        <a href=""><img src="images/badge.webp" alt=""></a>
+                        <a href=""><img src="images/badge.webp" alt=""></a>
+                        <a href=""><img src="images/badge.webp" alt=""></a>
+                    </div>
+                    <div class="badges-footer">
+                        <p>Showcase</p>
+                    </div>
+                </div>
+
                 <div class="galeria">
                     <div class="galeria-header">
                         <h3>Gallery</h3>
