--- a/web/index.html
+++ b/web/index.html
@@ -81,8 +81,9 @@
             <a href="" class="default-button">Learn more</a>
         </div>
 
-        <iframe width="500" height="280" src="https://www.youtube.com/embed/2RlTqFtdlH8" title="YouTube video player" frameborder="0" 
-        allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+        <div class="video-apresentacao">
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/2RlTqFtdlH8" title="YouTube video player" frameborder="0" allow="clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 
     <!--! Top Collections !-->
