--- a/web/perfil.html
+++ b/web/perfil.html
@@ -41,49 +41,65 @@
     <div class="container-princ">
         <!--! Coluna Esquerda !-->
         <div class="coluna-esquerda">
-            <div class="container-coluna">
-                <div class="trending">
-                    <h3>Trending</h3>
-                    <ul>
-                        <li>
-                            <span class="item-number">#1</span>
-                            <p>Bunny Buddies</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#2</span>
-                            <p>Flying Formations</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#3</span>
-                            <p>Creepy Creams</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#4</span>
-                            <p>MultiverseVM</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#5</span>
-                            <p>TheLandDAO Official</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#6</span>
-                            <p>Angry Pitbull Club</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                        <li>
-                            <span class="item-number">#7</span>
-                            <p>Roo Troop</p>
-                            <img src="images/perfil.svg" alt="">
-                        </li>
-                    </ul>
-                    <a>More</a>
-                </div>
+
+            <div class="trending">
+                <h3>Trending</h3>
+                <ul>
+                    <li>
+                        <span class="item-number">#1</span>
+                        <p>Bunny Buddies</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#2</span>
+                        <p>Flying Formations</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#3</span>
+                        <p>Creepy Creams</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#4</span>
+                        <p>MultiverseVM</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#5</span>
+                        <p>TheLandDAO Official</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#6</span>
+                        <p>Angry Pitbull Club</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                    <li>
+                        <span class="item-number">#7</span>
+                        <p>Roo Troop</p>
+                        <img src="images/perfil.svg" alt="">
+                    </li>
+                </ul>
+                <a>More</a>
             </div>
+
+            <div class="news">
+                <h3>News</h3>
+                <ul>
+                    <li>
+                        <img src="images/banner-perfil.jpeg" alt="">
+                    </li>
+                    <li>
+                        <img src="images/banner-perfil.jpeg" alt="">
+                    </li>
+                    <li>
+                        <img src="images/banner-perfil.jpeg" alt="">
+                    </li>
+                </ul>
+                <a>More</a>
+            </div>
+
         </div>
     
         <!--! Coluna Central !-->
