--- a/web/index.html
+++ b/web/index.html
@@ -40,33 +40,23 @@
     <!--! Slider !-->
     <div class="container-slider">
 
-        <div class="slider" id="slider">
+        <button class="handle left-handle">
+            <div class="text">&#8249;</div>
+        </button>
 
-            <div class="slide" id="slide">
-                <img src="images/banner.png" alt="">
-                <a onclick="slider_move(this)" class="img-button toLast"></a>
-            </div>
-            <div class="slide">
-                <img src="images/1.png" alt="">
-                <a onclick="slider_move(this)" class="img-button"></a>
-            </div>
-            <div class="slide">
-                <img src="images/2.png" alt="">
-                <a onclick="slider_move(this)" class="img-button"></a>
-            </div>
-            <div class="slide">
-                <img src="images/3.png" alt="">
-                <a onclick="slider_move(this)" class="img-button"></a>
-            </div>
-            <div class="slide">
-                <img src="images/banner.png" alt="">
-                <a onclick="slider_move(this)" class="img-button"></a>
-            </div>
-            <div class="slide ">
-                <img src="images/1.png" alt="">
-                <a onclick="slider_move(this)" class="img-button toFirst"></a>
-            </div>
+        <div class="slider">
+            <img src="images/banner.png">
+            <img src="images/1.png">
+            <img src="images/2.png">
+            <img src="images/3.png">
+            <img src="images/banner.png">
+            <img src="images/1.png">
         </div>
+
+        <button class="handle right-handle">
+            <div class="text">&#8250;</div>
+        </button>
+        
     </div>
 
     <!--! Apresentação !-->
