Add Achievements, Friends, Comments, Gallery -> slider
perfil.html:
+achievements
+friends
+comments
=gallery is now a slider

Outros:
=links do header agora redirecionam para sua respectiva página
index.html:
=imagens do slider agora são links
=fix da função sliderAuto(), agora funciona corretamente
perfil.html:
=itens do trending e news agora são links
=fix svg da foto de perfil (bordas redondas)
='Showcase' em footer de containers agora é um link

--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,8 @@
         <a href="index.html"><img src="images/MHLogoSMALL.png" alt="Logo da MoonHunters"></a>
 
         <nav>
-            <a href="">Home</a>
-            <a href="">Profile</a>
+            <a href="index.html">Home</a>
+            <a href="perfil.html">Profile</a>
             <a href="">Community</a>
             <a href="">Market</a>
             <a href="">Gambling</a>
@@ -32,7 +32,7 @@
         
         <div class="register-div">
             <span>
-                <a href="perfil.html" class="default-button">Register</a>
+                <a href="" class="default-button">Register</a>
             </span>
         </div>
     </header>
@@ -45,12 +45,12 @@
         </button>
 
         <div class="slider">
-            <img src="images/banner.png">
-            <img src="images/1.png">
-            <img src="images/2.png">
-            <img src="images/3.png">
-            <img src="images/banner.png">
-            <img src="images/1.png">
+            <a><img src="images/banner.png"></a>
+            <a><img src="images/1.png"></a>
+            <a><img src="images/2.png"></a>
+            <a><img src="images/3.png"></a>
+            <a><img src="images/banner.png"></a>
+            <a><img src="images/1.png"></a>
         </div>
 
         <button class="handle right-handle">
